my first commit

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <div class="main">
         <div class="avatar">
-            <img src="./img/perfil0.jpg" alt=" perfil">
+            <img src="./img/perfil.jpg" alt=" perfil">
         </div>
         <div class="name">
 
@@ -26,26 +26,29 @@
                 <a href="https://www.google.pt" target="_blank">Link 1</a>
             </button>
             <button class="bt">
-                 <a href="https://www.google.pt" target="_blank">Link 2</a>
+                <a href="https://www.google.pt" target="_blank">Link 2</a>
             </button>
             <button class="bt">
-                 <a href="https://www.google.pt" target="_blank">Link 3</a>
+                <a href="https://www.google.pt" target="_blank">Link 3</a>
             </button>
             <button class="bt">
-                 <a href="https://www.google.pt" target="_blank">Link 4</a>
+                <a href="https://www.google.pt" target="_blank">Link 4</a>
             </button>
         </div>
 
         <div class="social">
-            <a href="https://twitter.com/?lang=pt_pt" target="_blank" ><img class="social_icon" src="./img/twitter.svg" alt=""></a>
+            <a href="https://twitter.com/?lang=pt_pt" target="_blank"><img class="social_icon" src="./img/twitter.svg"
+                    alt=""></a>
 
-            <a href="https://www.twitch.tv/" target="_blank" ><img class="social_icon" src="./img/twitch.svg" alt=""></a>
+            <a href="https://www.twitch.tv/" target="_blank"><img class="social_icon" src="./img/twitch.svg" alt=""></a>
 
-            <a href="https://www.instagram.com/" target="_blank" > <img class="social_icon" src="./img/instagram.svg" alt=""></a>
+            <a href="https://www.instagram.com/" target="_blank"> <img class="social_icon" src="./img/instagram.svg"
+                    alt=""></a>
 
-            <a href="https://www.linkedin.com/" target="_blank" > <img class="social_icon" src="./img/linkedin.svg" alt=""></a>
+            <a href="https://www.linkedin.com/" target="_blank"> <img class="social_icon" src="./img/linkedin.svg"
+                    alt=""></a>
 
-            <a href="https://github.com/" target="_blank" > <img class="social_icon" src="./img/github.svg" alt=""></a>
+            <a href="https://github.com/" target="_blank"> <img class="social_icon" src="./img/github.svg" alt=""></a>
         </div>
     </div>
 </body>
